--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,3 +19,21 @@ header {
   width: 92px;
   height: 80px;
 }
+
+@media (max-width: 900px) {
+  header {
+    padding: 0 60px;
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    padding: 0 30px 0 0;
+  }
+}
+
+@media (max-width: 400px) {
+  header {
+    padding: 0 10px 0 0;
+  }
+}
