--- a/src/styles/Basket.css
+++ b/src/styles/Basket.css
@@ -23,6 +23,11 @@
   transform: scale(1.05);
 }
 
+.basket__close {
+  color: black;
+  text-decoration: none;
+}
+
 @media (max-width: 900px) {
   .basket {
     padding: 10px 60px 100px;
