--- a/src/styles/ProductPage.css
+++ b/src/styles/ProductPage.css
@@ -1,5 +1,5 @@
 .product-page {
-  min-height: 65.7vh;
+  min-height: calc(100vh - 204px);
   padding: 10px 120px 100px;
 
   display: flex;
@@ -41,6 +41,10 @@
 .product-page__add-button:hover {
   transform: scale(1.05);
   transition: all 300ms;
+}
+
+.product-page__add-button:active {
+  transform: scale(1.02);
 }
 
 @media (max-width: 900px) {
