--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,13 @@
 header {
-  height: 54px;
-  display: flex;
-  align-items: center;
   position: sticky;
   top: 0;
   z-index: 100;
+}
 
+.header {
+  height: 54px;
+  display: flex;
+  align-items: center;
   padding: 0 120px;
 
   opacity: 0.8;
@@ -14,8 +16,9 @@ header {
 }
 
 .header__logo {
-  opacity: 1;
-  margin-top: 26px;
+  position: fixed;
+  top: 0;
+  left: 120px;
   width: 92px;
   height: 80px;
 }
