--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -26,7 +26,7 @@ header {
 .header__link-to-basket {
   width: 35px;
   height: 35px;
-  margin-left: 5px;
+  margin-left: 15px;
   background-image: url('../images/basket_icon.png');
   background-size: contain;
   transition: transform 300ms;
@@ -66,7 +66,7 @@ header {
     padding: 0 10px 0 0;
   }
 
-  .header__logo {
-    left: 0;
+  .header__link-to-basket {
+    margin-left: 5px;
   }
 }
