--- a/src/styles/BasketItem.css
+++ b/src/styles/BasketItem.css
@@ -4,24 +4,18 @@
   flex-wrap: wrap;
 }
 
+.basket-item__image {
+  width: 150px;
+  height: 150px;
+}
+
 .basket-item__name {
   margin-left: 10px;
 }
 
-.basket-item__count-wrapper {
-  margin-left: auto;
+.basket-item__ingredients {
   display: flex;
-}
-
-.basket-item__count {
-  width: 35px;
-  height: 35px;
-  text-align: center;
-  line-height: 30px;
-
-  border: 1px solid black;
-  box-sizing: border-box;
-  font-size: 20px;
+  margin-left: auto;
 }
 
 .basket-item button {
@@ -46,4 +40,23 @@
 
 .basket-item__delete-button {
   margin-left: 10px;
+}
+
+@media (max-width: 1100px) {
+  .basket-item__image {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 600px) {
+  .basket-item {
+    flex-direction: column;
+  }
+
+  .basket-item__ingredients {
+    width: 100%;
+    justify-content: space-between;
+    margin-left: 0;
+  }
 }
