--- a/src/styles/checkmark.css
+++ b/src/styles/checkmark.css
@@ -1,39 +1,19 @@
-label {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  }
-  
-  input[type=checkbox].css-checkbox {
-      position: absolute; 
-      overflow: hidden; 
-      clip: rect(0 0 0 0); 
-      height:1px; 
-      width:1px; 
-      margin:-1px; 
-      padding:0;
-      border:0;
-  }
-  
-  input[type=checkbox].css-checkbox + label.css-label {
-    padding-left:20px;
-    height:15px; 
-    display:inline-block;
-    line-height:15px;
-    background-repeat:no-repeat;
-    background-position: 0 0;
-    font-size:15px;
-    vertical-align:middle;
-    cursor:pointer;
-  }
-  
-  input[type=checkbox].css-checkbox:checked + label.css-label {
-    background-position: 0 -15px;
-  }
-  
-  .css-label{
-    background-image:url(http://csscheckbox.com/checkboxes/dark-check-green.png);
-  }
+.checkmark {
+  margin-right: 5px;
+  border: 1px solid black;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.checkbox {
+  width: 1px;
+}
+
+.checkbox:checked ~.checkmark {
+  color: black;
+}
